force-app/main/default/objects/hed__Course__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>The Prefix &amp; Number combo for a course</description>
    <externalId>true</externalId>
    <inlineHelpText>e.g. ACT 205</inlineHelpText>
    <label>Course Code</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>