force-app/main/default/objects/hed__Course__c/fields/CPS_ID__c.field-meta.xml
<CustomField>
    <fullName>CPS_ID__c</fullName>
    <description>ID in CPS</description>
    <externalId>true</externalId>
    <inlineHelpText>ID in CPS</inlineHelpText>
    <label>CPS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>