force-app/main/default/objects/hed__Course__c/fields/Has_Section_Available_for_Registration__c.field-meta.xml
<CustomField>
    <fullName>Has_Section_Available_for_Registration__c</fullName>
    <description>True if at least 1 section is available for registration.</description>
    <formula>Available_Section_Count__c&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if at least 1 section is available for registration.</inlineHelpText>
    <label>Has Section Available for Registration</label>
    <type>Checkbox</type>
</CustomField>