force-app/main/default/objects/hed__Course__c/fields/Quality_Matters__c.field-meta.xml
<CustomField>
    <fullName>Quality_Matters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Canvas LMS course was created w/ Quality Matters specifications.</description>
    <inlineHelpText>True if Canvas LMS course was created w/ Quality Matters specifications.</inlineHelpText>
    <label>Quality Matters</label>
    <type>Checkbox</type>
</CustomField>