force-app/main/default/objects/hed__Course__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <description>Standard Academic Credit Course</description>
    <label>Credit</label>
</RecordType>