force-app/main/default/objects/hed__Course__c/recordTypes/Noncredit.recordType-meta.xml
<RecordType>
    <fullName>Noncredit</fullName>
    <active>true</active>
    <description>Noncredit Course Offering</description>
    <label>Noncredit</label>
</RecordType>